app/styles/lang/_fr_CA.scss
body.lang_fr_CA {

  /* Auction Dashboard */
  #AuctionDashboardPage {
    // handle long labels for 'title'
    // TODO - it may be appropriate to have most wells to stop using fixed height and instead use min-height
    // and auto height. This should be considered with respective to a responsive design
    .auction-well {
      min-height: 270px;
      height: auto;
      @media (max-width: 1200px) {
        .dash-minor {
          font-size: 11px;
        }
      }

      @media (max-width: 1120px) {
        .dash-minor {
          font-size: 10px;
        }
      }
    }
  }

  // make wells that can be edited (by clicking subtitle)
  // go to two lines since many of the main titles are too long to allow having everything on one line
  .well-sub-title-edit {
    .btn-unstyle {
      float: none;
    }

    .cancel {
      // keep cancel on left side
      float: left;
    }
  }

  /* Dashboard */
  #DashboardPage {
    .payment-summary {
      /* Handle longer title for payment summary */
      .well-title {
        font-size: 18px;
      }
    }
    @media (max-width: 1090px) {
      .dash-well {
        .well-title {
          font-size: 16px;
        }
      }
    }

    // counter and text in the upcoming calendar overflow to the next line on this screen width.
    @media (max-width: 1140px) {
      .counter {
        min-width: 30px;
      }

      .fc-event-title {
        font-size: 10px;
      }

      .fc-event-subtitle {
        font-size: 14px;
      }
    }

    .accordion-button {
      width: 340px;
    }

    .btn-floor-plans {
      //font-size: 12px;
      padding: 7px 5px;

      .paired-body {
        max-width: 125px;
      }
      .paired-media {
        position: absolute;
        top: 14px;
        right: 10px;
      }
    }

    .col-xs-2.well.dash-well ul {
      margin-top: 8%;
    }

    #floorPlan {
      padding-left: 7px;
      padding-right: 7px;
      .paired-body {
        float: left;
      }
      .paired-media {
        right: 0;
        float: right;
      }
    }

    @media (min-width: 1125px) {
      .btn-floor-plans .paired-media {
        right: 20px;
      }
    }
  }

  /* Details */
  #VehicleDetailsPage {
    @media (max-width: 1090px) {

      .well-title {
        font-size: 16px;

        .well-sub-title, a {
          font-size: 13px;
          margin-top: 2px;
        }
      }

      .payoff-group .btn-text {
        width: 100%;
        padding-bottom: 5px;
      }

    }

    .sidebar .notice-bar {
      .paired-body {
        width: 80%;
      }
    }
  }

  /* Analytics */
  #AnalyticsPage {
    @media (max-width: 1090px) {

      .well-title {
        font-size: 16px;
      }

      .aging-vehicles .list-table {
        padding-left: 5px;
        padding-right: 5px;
      }
    }
  }

  #TitleReleasesPage {

    .requests-grid {
      .btn-title-request {
        width: 150px;
        font-size: 8px;
      }
    }

  }

  /* Payments */
  #PaymentsPage {
    .well-title {
      .well-sub-title, a {
        font-size: 13px;
        margin-top: 6px;
      }
      button {
        font-size: 14px;
        margin-top: 6px;
      }
    }
    .lockup-minor {
      font-size: 11px;
    }
    .search Label {
      font-size: 11px;
    }

    @media (max-width: 1090px) {

      .well-title {
        font-size: 15px;

        .well-sub-title, a, .right {
          font-size: 12px;
          margin-top: 4px;
        }
        button {
          font-size: 14px;
          margin-top: 6px;
        }
      }

    }

    @media (max-width: 400px) {
      .well-title {
        font-size: 14px;

        .well-sub-title, a, .right {
          font-size: 10px !important;
        }
      }
    }

    .well.sticky .well-footer {
      .col-md-4 {
        width: 39%;
      }
      .col-md-8 {
        width: 58%;
      }
    }

    .filter-options {
      .col-md-5 {
        width: 120px;
        margin-top: -14px;
      }
      .col-md-7 {
        width: 232px;
      }
    }

    @media (min-width: 1120px) {
      .filter-options {
        .col-md-5 {
          width: 160px;
          margin-top: 0;
        }
      }
    }
  }

  /* Checkout */
  #CheckoutPage {
    @media (max-width: 1090px) {

      .well-title {
        font-size: 16px;
      }

    }
  }

  #ReceiptsPage {
    .filter-options {
      .col-md-5 {
        width: 120px;
        margin-top: -14px;
      }
      .col-md-7 {
        width: 232px;
      }
    }

    .search-form Label {
      font-size: 11px;
    }

    @media (min-width: 1150px) {
      .filter-options {
        .col-md-5 {
          width: 170px;
          margin-top: 0;
        }
      }
    }
  }

  #ProfileSettingsPage, #AccountManagementPage, #AuctionSettingsPage {
    @media (max-width: 1090px) {

      .well-title {
        font-size: 16px;

        .well-sub-title, a {
          font-size: 13px;
          margin-top: 2px;
        }
        button {
          font-size: 12px;
          margin-top: 6px;
        }
      }

    }
    .questText {
      font-size: 11px;
    }
  }

  #AccountManagementPage {
    .well-default-header {
      padding-bottom: 10px;
    }
  }

  #DocumentsPage {
    .video-well {
      display: none;
    }
    .documents-well {
      width: 45%;
    }
  }

  #AuctionFloorplanPage {
    @media (min-width: 1080px) {
      .seller-has-title-box .cr-label {
        width: 80%;
      }
    }
  }

  /* Modals */
  [name='searchControls'] > .span4 > label {
    white-space: nowrap;
  }

  .modal .btn-sm {
    font-size: 12px;
    padding: 5px 7px;
  }

  /* Navs */
  .nav-secondary {
    height: 52px;

    .link {
      height: auto;
      a {
        height: 26px;
        vertical-align: middle;
        text-align: center;
        padding: 8px 0;
      }
    }

    .link_floorcar {
      width: 150px;

      a {
        padding: 0 !important;
      }
    }

    .cart-btn {
      height: 50px;
    }

    li {
      padding: 5px 8px 7px;
    }
  }

  #ValueLookupPage {
    .btn-value-lookup-ngc {
      padding: 7px 10px 7px 10px !important;
    }

    .btn-value-lookup-mmr {
      padding: 13px !important;
    }
  }

  /* Auction Nav */
  .app-header.auctions {
    .nav-bkgd {
      height: 62px;
    }
    .nav-primary li {
      max-width: 30%;
      text-align: center;

      &.link_auction_dashboard {
        width: 112px;
      }

      &.link_auction_sellerfloorplan {
        width: 300px;
      }

      &.link_auction_dealersearch {
        width: 155px;
      }

      &.link_auction_bulkflooring {
        width: 155px;
      }

      &.link_auction_reports {
        width: 112px;
      }
    }
  }
}

